# circuit-simulator

./: CMakeLists.txt  gates.cpp  gates.h  main.cpp  parser.cpp  parser.h  sample.txt  visualizer.cpp  visualizer.h
simd/: basic_test.cpp  basic_test.h
